{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 18,
  "lineage": "4067ee45-e83c-4641-e366-fd9f84c2f203",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "front_lb_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/zones/us-central1-a/instanceGroups/frontend-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-04-15T13:14:29.649-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "N6KNMAfxdMc=",
            "generated_id": 3984957414350933834,
            "health_checks": [
              "projects/qwiklabs-gcp-04-e87e4f576929/global/healthChecks/http-health-check"
            ],
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/backendServices/frontend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "frontend-service",
            "port_name": "http",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/backendServices/frontend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_check",
            "google_compute_instance_group_manager.front_mig",
            "google_compute_instance_template.front_template",
            "google_compute_network.vpc_front",
            "google_compute_subnetwork.sub_front"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "5000",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-15T13:13:50.795-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/firewalls/fw-back",
            "log_config": [],
            "name": "fw-back",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-backend",
            "params": [],
            "priority": 1000,
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/firewalls/fw-back",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-15T13:13:50.442-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/firewalls/fw-front",
            "log_config": [],
            "name": "fw-front",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-frontend",
            "params": [],
            "priority": 1000,
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/firewalls/fw-front",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_front"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 8285244967944867613,
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/forwardingRules/global-rule",
            "ip_address": "34.117.226.84",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/forwardingRules/global-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.front_lb_service",
            "google_compute_health_check.http_check",
            "google_compute_instance_group_manager.front_mig",
            "google_compute_instance_template.front_template",
            "google_compute_network.vpc_front",
            "google_compute_subnetwork.sub_front",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-backend",
            "mtu": 0,
            "name": "vpc-backend",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7708771416638902150",
            "numeric_id": "7708771416638902150",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-backend"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-frontend",
            "mtu": 0,
            "name": "vpc-frontend",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8265881322639216519",
            "numeric_id": "8265881322639216519",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-frontend"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-04-15T13:13:51.272-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/regions/us-central1/subnetworks/subnet-backend",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-backend",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/regions/us-central1/subnetworks/subnet-backend",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7455430288193245072
          },
          "dependencies": [
            "google_compute_network.vpc_back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-04-15T13:13:51.600-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/regions/us-central1/subnetworks/subnet-frontend",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/networks/vpc-frontend",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/regions/us-central1/subnetworks/subnet-frontend",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2373585216463851408
          },
          "dependencies": [
            "google_compute_network.vpc_front"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-15T13:15:34.500-07:00",
            "fingerprint": "fuXRZjxyGus=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "proxy_bind": false,
            "proxy_id": 173330795651550985,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/urlMaps/web-map"
          },
          "dependencies": [
            "google_compute_backend_service.front_lb_service",
            "google_compute_health_check.http_check",
            "google_compute_instance_group_manager.front_mig",
            "google_compute_instance_template.front_template",
            "google_compute_network.vpc_front",
            "google_compute_subnetwork.sub_front",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-15T13:15:22.520-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/backendServices/frontend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "LvIecZjxW4M=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-04-e87e4f576929/global/urlMaps/web-map",
            "map_id": 2603553695525392181,
            "name": "web-map",
            "path_matcher": [],
            "project": "qwiklabs-gcp-04-e87e4f576929",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-e87e4f576929/global/urlMaps/web-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.front_lb_service",
            "google_compute_health_check.http_check",
            "google_compute_instance_group_manager.front_mig",
            "google_compute_instance_template.front_template",
            "google_compute_network.vpc_front",
            "google_compute_subnetwork.sub_front"
          ]
        }
      ]
    }
  ]
}